updating our details... again

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>It's pronounced "Jin-uh-LET", I'm sure you were desperately trying to figure that out.</p>
       <h1>Where I'm From</h1>
-      <p>I'm from Dallas, Georgia</p>
+      <p>I'm from Dallas, Georgia. Drive toward the middle of nowhere for an hour or so and hang a right - Welcome to Dallas.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>My favorite hobbies are writing/recording music, mining, trading and researching cryptocurrency and playing video games.</p>
+      <p>My favorite hobbies are writing/recording music, mining/trading/researching cryptocurrency and playing video games.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job is working for myself - building decentralized, censorship-resistant applications. Astronaut Cowboy Millionaire as a fallback.</p>
       <h1>Where do you live?</h1>
       <p>Dallas, Georgia. Real exciting, huh?</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I've always liked building things and expressing myself creatively. I'm in love with all things tech and this was the natural next step!</p>
+      <p>I've always liked creating/building things and I'm in love with all things tech, so this seemed like the natural next step!</p>
     </section>
 
     <footer id="footer">
